# posto

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README.rst  docker-compose.yml  makefile  postman_collection.json  setup.cfg
posto/: __init__.py  config.py
posto/analytics/: __init__.py  adapters.py  client.py
posto/main/: __init__.py  views.py
posto/utils/: validators.py
posto/webhook/: __init__.py  auth.py  processor.py  views.py
tests/: conftest.py  utils.py
tests/main/: test_views.py
tests/webhook/: test_processor.py  test_views.py
tests/webhook/samples/: github_new_issue.json  gitlab_new_issue.json
