[metadata]
name = posto
version = attr: posto.__version__
description = A python sink application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tefra/posto
author = Christodoulos Tsoulloftas
author_email = "chris@komposta.net"
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
keywords = webhooks,sink
project_urls =
    Source=https://github.com/tefra/posto

[options]
packages = posto
install_requires =
    flask==2.0.2
python_requires = >=3.10
include_package_data = True

[options.extras_require]
test =
    codecov
    pre-commit
    pytest
    pytest-cov

[flake8]
exclude = tests/*
max-line-length = 88
ignore = W503,ANN101,ANN102,E203

[doc8]
max-line-length = 88

[tool:pytest]
addopts = --color=yes
